Fix flex-wrap

--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,7 @@ ul {
     list-style: none;
     display: flex;
     justify-content:space-around;
+    flex-wrap: wrap;
 }
 
 li {
